# split-bill

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  Looking at the raw text  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gemini_ocr.py  main.py  minio_utils.py  ocr_utils.py  pyproject.toml  readme.md  requirements.txt  split_logic.py  supervisord.conf
.github/workflows/: ci-master.yml
.streamlit/: config.toml
api/src/: api.py  gemini_ocr.py  minio_utils.py  split_logic.py
app/src/: constants.py  main.py
src/: api.py  gemini_ocr.py  main.py  minio_utils.py  split_logic.py
