[project]
name = "split-bill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.2",
    "cryptography>=45.0.3",
    "fastapi>=0.115.12",
    "google-genai>=1.19.0",
    "httptools==0.6.1",
    "loguru>=0.7.3",
    "minio>=7.2.15",
    "pandas>=2.3.0",
    "protobuf==4.25.3",
    "pycryptodomex>=3.23.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "streamlit==1.45.0",
    "uvicorn>=0.34.3",
    "uvloop==0.19.0",
]
